# uos-grants

./: .dockerignore  .gitignore  Dockerfile  dev.Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  package.json
backend/open_webui/: main.py
backend/open_webui/migrations/: env.py
backend/open_webui/migrations/versions/: 622cef9a393d_add_researcher_tables.py
backend/open_webui/models/: .auths.py.swp
backend/open_webui/routers/: auths.py  grants_feedback.py  grants_feedback_ui.py
backend/open_webui/templates/: feedback.html
loaders/: graph_generator.py  interest_embedding.py
src/lib/: constants.ts
src/routes/auth/: +page.svelte
uos_grants/: pyproject.toml  requirements.txt  uos_staff_links_depth_50.txt
uos_grants/tests/: ollama_ai_config.yaml  open_ai_config.yaml  test_config.py
uos_grants/uos_grants/: collect_update_researchers.py  collectors.py  embed_chroma_db_from_postgres.py  embed_to_vectorstore.py  embedding.py  llm.py  researchers.py  sheffield_rag_function.py  utils.py  webloaders.py  webloaders_async.py  webloaders_sync.py
uos_grants/uos_grants/config/: config_handler.py
uos_grants/uos_grants/connectors/: db.py  models.py  repository.py
uos_grants/uos_grants/db/: chat_history.py  vector_db.py
uos_grants/uos_grants/rag/: nodes.py  react_agent.py  researcher_rag.py  test.py  tools.py
